<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyInfoNow</string>
    <string name="action_settings">Settings</string>
    <string name="botao_sair">Sair</string>
    <string name="botao_atualizar">Atualizar</string>
    <string name="ip">192.168.100.095</string>
    <string name="vazao">0.0 Mbps</string>
    <string name="rotulo_endereco_ip_local">Endereço IP Local</string>
    <string name="rotulo_endereco_ip_externo">Endereço IP Externo</string>
    <string name="rotulo_endereco_mac">Endereço MAC</string>
    <string name="rotulo_vazao">Taxa de Conexao</string>
    <string name="rotulo_gps">Latitude / Longitude</string>
    <string name="rotulo_icone">Menu</string>
    <string name="title_activity_ajuda">MyInfoNow</string>
    <string name="botao_voltar">Voltar</string>
    <string name="autor_charles">Charles Garrocho</string>
    <string name="autor_paulo">Paulo Vitor Francisco</string>

</resources>