<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AtividadeAjuda"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/atividade_ajuda_imagem_logo_add_ti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/rotulo_icone"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/atividade_ajuda_botao_voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/voltar"
        android:onClick="voltar"
        android:text="@string/botao_voltar"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/atividade_ajuda_texto_autor_charles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atividade_ajuda_imagem_logo_add_ti"
        android:layout_centerHorizontal="true"
        android:text="@string/autor_charles"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/rotulo_titulo" />

    <TextView
        android:id="@+id/atividade_ajuda_texto_autor_paulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/atividade_ajuda_texto_autor_charles"
        android:layout_centerHorizontal="true"
        android:text="@string/autor_paulo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/rotulo_titulo"  />

</RelativeLayout>