<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aba_minhas_informacoes"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        
    <TextView
        android:id="@+id/aba_minhas_informacoes_campo_texto_ip_externo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/aba_minhas_informacoes_check_box_ip_externo"
        android:text="@string/ip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        style="@style/rotulo_sub_titulo" />
        
    <TextView
        android:id="@+id/aba_minhas_informacoes_campo_texto_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/aba_minhas_informacoes_check_box_mac"
        android:text="@string/ip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        style="@style/rotulo_sub_titulo" />
        
    <TextView
        android:id="@+id/aba_minhas_informacoes_campo_texto_vazao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/aba_minhas_informacoes_check_box_vazao"
        android:layout_marginTop="3dp"
        android:text="@string/vazao"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        style="@style/rotulo_sub_titulo" />
        
    <CheckBox
        android:id="@+id/aba_minhas_informacoes_check_box_ip_externo"
        style="@style/rotulo_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aba_minhas_informacoes_campo_texto_ip_local"
        android:layout_centerHorizontal="true"
        android:text="@string/rotulo_endereco_ip_externo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridView
        android:id="@+id/aba_minhas_informacoes_menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/aba_minhas_informacoes_campo_texto_vazao"
        android:columnWidth="130dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:padding="10dp"
        android:stackFromBottom="true"
        android:stretchMode="columnWidth" >
    </GridView>
    
	<CheckBox
	    android:id="@+id/checkBox_my_current_ip_local"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/activity_my_current_rotulo_ip_local"
	    android:layout_alignBottom="@+id/activity_my_current_rotulo_ip_local"
	    android:layout_marginRight="23dp"
	    android:checked="True"
	    android:layout_toLeftOf="@+id/activity_my_current_rotulo_ip_externo" />    

    <CheckBox
        android:id="@+id/checkBox_my_current_ip_externo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_my_current_rotulo_ip_externo"
        android:layout_alignBottom="@+id/activity_my_current_rotulo_ip_externo"
        android:checked="True"
        android:layout_alignLeft="@+id/checkBox_my_current_ip_local" />
    
	<CheckBox
        android:id="@+id/checkBox_my_current_ip_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_my_current_rotulo_mac"
        android:layout_alignBottom="@+id/activity_my_current_rotulo_mac"
        android:checked="True"
        android:layout_alignLeft="@+id/checkBox_my_current_ip_externo" />
    
	<CheckBox
        android:id="@+id/checkBox_my_current_ip_vazao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox_my_current_ip_mac"
        android:layout_below="@+id/activity_my_current_campo_texto_mac" />

    <CheckBox
        android:id="@+id/aba_minhas_informacoes_check_box_ip_local"
        style="@style/rotulo_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/aba_minhas_informacoes_campo_texto_ip_local"
        android:layout_alignLeft="@+id/aba_minhas_informacoes_check_box_ip_externo"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/rotulo_endereco_ip_local" />

    <CheckBox
        android:id="@+id/aba_minhas_informacoes_check_box_vazao"
        style="@style/rotulo_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aba_minhas_informacoes_check_box_ip_externo"
        android:layout_below="@+id/aba_minhas_informacoes_campo_texto_mac"
        android:text="@string/rotulo_vazao"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/aba_minhas_informacoes_check_box_mac"
        style="@style/rotulo_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aba_minhas_informacoes_check_box_vazao"
        android:layout_below="@+id/aba_minhas_informacoes_campo_texto_ip_externo"
        android:text="@string/rotulo_endereco_mac"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/aba_minhas_informacoes_campo_texto_ip_local"
        style="@style/rotulo_sub_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/ip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>